added html to both jose and maria

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         	Links to Hurricane Pages
     </h1>
     	<h2>
-    		<a href="Jim's Hurricane Page Jose">Jose</a>
+    		<a href="Jim's Hurricane Page Jose.html">Jose</a>
     	</h2>
     	<br>
     	<br>
     	<h2>
-    		<a href="Jim's Hurricane Page Maria">Maria</a>
+    		<a href="Jim's Hurricane Page Maria.html">Maria</a>
     	</h2>
     	<br>
     	<br>
