changed URL. for GFS and ECMWF models

--- a/Jim's Hurricane Page Maria.html
+++ b/Jim's Hurricane Page Maria.html
@@ -31,9 +31,9 @@
       			<td><a href="https://www.tropicaltidbits.com/storminfo/15L_tracks_latest.png">
   <img src="https://www.tropicaltidbits.com/storminfo/15L_tracks_latest.png" alt="">
 					</a></td>
-      			<td><a href="https://www.tropicaltidbits.com/analysis/models/?model=gfs&region=us&pkg=z500_mslp&runtime=2017091718&fh=-6&xpos=0&ypos=0">GFS Model
+      			<td><a href="https://www.tropicaltidbits.com/analysis/models/?model=gfs">GFS Model
 					</a></td>
-      			<td><a href="https://www.tropicaltidbits.com/analysis/models/?model=ecmwf&region=us&pkg=z500_mslp&runtime=2017091712&fh=0&xpos=0&ypos=0"> ECMWF Model
+      			<td><a href="https://www.tropicaltidbits.com/analysis/models/?model=ecmwf"> ECMWF Model
 					</a></td>
       		</tr>   
       	</table>     
