added a <div> element

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<title>Hurricane Page</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
+    </div></div>
     <body>
     <h1>
         	Links to Hurricane Pages
