changed the <div> element

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     	<title>Hurricane Page</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
-    </div></div>
+    <div>
     <body>
     <h1>
         	Links to Hurricane Pages
@@ -25,4 +25,5 @@
     		<a href="http://spaghettimodels.com">Mikes Weather Page</a>
     	</h2>
     </body>
+    </div>
 </html>
