added a class to body
Body class homepage
Added class to css
Deleted div

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     	<title>Hurricane Page</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
-    <div id="div1"></div>
-    <body>
+    <body class="homepage">
     <h1>
         	Links to Hurricane Pages
     </h1>
