--- a/index.html
+++ b/index.html
@@ -8,20 +8,14 @@
     <h1>
         	Links to Hurricane Pages
     </h1>
+    	
     	<h2>
-    		<a href="Jim's Hurricane Page Jose.html">Jose</a>
-    	</h2>
-    	<br>
-    	<br>
-    	<h2>
-    		<a href="Jim's Hurricane Page Maria.html">Maria</a>
+    		<a href="Jim's Hurricane Page Nate.html">Nate</a>
     	</h2>
     	<br>
     	<br>
     	<br>
     	<br>
-    	<h2>
-    		<a href="http://spaghettimodels.com">Mikes Weather Page</a>
-    	</h2>
+    	
       </body>
 </html>
