--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
         	Links to Hurricane Pages
     </h1>
     	<h2>
-    		<a href="Jim's Hurricane Page Maria.html">Maria</a>
-    	</h2>
-    	<br>
-    	<br>
-    	<br>
+    		<a href="Jim's Hurricane Page Nate.html">Nate</a>
+        </h2>
     	<br>
     	<h2>
     		<a href="http://spaghettimodels.com">Mikes Weather Page</a>
