renamed the link to Nate page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         	Links to Hurricane Pages
     </h1>
     	<h2>
-    		<a href="Jim's Hurricane Page Nate.html">Nate</a>
+    		<a href="Nate.html">Nate</a>
         </h2>
     	<br>
     	<h2>
