another tr a fixing the cone

--- a/Nate.html
+++ b/Nate.html
@@ -15,13 +15,13 @@
         <table>
       		<tr>
       			<td><a href="http://www.nhc.noaa.gov/storm_graphics/AT16/refresh/AL162017_5day_cone_no_line_and_wind+png/212738_5day_cone_no_line_and_wind.png">
-  <img src="" alt="http://www.nhc.noaa.gov/storm_graphics/AT16/refresh/AL162017_5day_cone_no_line_and_wind+png/212738_5day_cone_no_line_and_wind.png" >
+  <img src="http://www.nhc.noaa.gov/storm_graphics/AT16/refresh/AL162017_5day_cone_no_line_and_wind+png/212738_5day_cone_no_line_and_wind.png" alt="">
 					</a>
 				</td>
       			<td><a href="https://earth.nullschool.net/#current/wind/isobaric/1000hPa/orthographic=-71.84,27.13,674">Earth Winds
       			</a>
       			</td>
-      			<td><a href="https://www.sfwmd.gov/weather-radar/hurricane-model-plots">
+      			<td><a href="https://www.sfwmd.gov/I weather-radar/hurricane-model-plots">
   <img src="https://my.sfwmd.gov/sfwmd/common/images/weather/plots/storm_16" alt="">
       				</a>
       			</td>
