Fixed link to SWFWMA Hurricane link 2nd time

--- a/Nate.html
+++ b/Nate.html
@@ -21,8 +21,9 @@
       			<td><a href="https://earth.nullschool.net/#current/wind/isobaric/1000hPa/orthographic=-71.84,27.13,674">Earth Winds
       			</a>
       			</td>
-      			<td><a href="https://www.sfwmd.gov/weather-radar/hurricane-model-plots" alt="">
-      				</a>
+      			<td><a href="https://my.sfwmd.gov/sfwmd/common/images/weather/plots/storm_16" alt="">
+      				<img src="https://my.sfwmd.gov/sfwmd/common/images/weather/plots/storm_16" alt="">
+				</a>
       			</td>
       		</tr>   
       	</table>
